src/App.scss
:root {
  --disabled-button-default-color: #bdbdbd;
}

@font-face {
  font-family: 'Cursed Timer Ulil';
  src: url(./assets/fonts/cursed-timer-ulil-font/CursedTimerUlil.ttf) format('truetype');
}

.App {
  background-image: url(./assets/blu_intel_pattern.png);
  height: 100vh;
  padding-top: 4em;
  text-align: center;

  p {
    direction: rtl;
    font-family: 'Cursed Timer Ulil';
    font-size: 32pt;
    margin: 0;
    overflow-x: scroll;
    unicode-bidi:bidi-override;
  }

  &>div:first-child {
    background-color: #c8e6c9;
    border: 2px solid grey;
    border-bottom: 0;
    font-size: 20pt;
    margin-left: calc(50% - 6em);
    min-height: 2em;
    width: calc(12em - 4px);

    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  .buttons {
    button {
      background-color: black;
      border: 2px solid gray;
      color: white;
      cursor: pointer;
      font-size: 20pt;
      min-width: 3em;
      min-height: 2em;

      &:disabled {
        background-color: var(--disabled-button-default-color);
        cursor: not-allowed;

        &:hover {
          background-color: var(--disabled-button-default-color);
        }
      }

      &:hover {
        background-color: #212121;
      }

      &:not(:first-child) {
        border-left: 0;
      }
    }

    div {
      white-space: nowrap;
    }

    div:not(:first-child) {
      button {
        border-top: 0;
      }
    }

    div:nth-child(5) {
      button {
        min-width: 6em;

        &:first-child {
          background-color: #eeeeee;
          color: black;

          &:hover {
            background-color: #e0e0e0;
          }
        }

        &:last-child {
          background-color: #b71c1c;
          color: #ffebee;

          &:hover {
            background-color: #c62828;
          }
        }
      }
    }

    div:last-child {
      button {
        background-color: #1b5e20;
        color: #c8e6c9;
        width: 12em;

        &:hover {
          background-color: #2e7d32;
        }

        &:disabled {
          background-color: var(--disabled-button-default-color);

          &:hover {
            background-color: var(--disabled-button-default-color);
          }
        }
      }
    }
  }

  #fun {
    background-image: url(./assets/ratBlockSmol.gif);
    background-repeat: no-repeat;
    background-position: center; 
    display: inline-block;
    vertical-align: top;
  }
}

